# proxy-fmu

./: .clang-format  CMakeLists.txt  README.md  conanfile.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  upload.yml
cmake/: FindTHRIFT.cmake  config.cmake.in  project-config.cmake.in
examples/: CMakeLists.txt  fmi_test.cpp  proxy_test.cpp
include/proxyfmu/: lib_info.hpp
src/: CMakeLists.txt
src/proxyfmu/: process_helper.hpp
src/proxyfmu/client/: proxy_fmu.cpp  proxy_slave.cpp  proxy_slave.hpp
src/thrift/: CMakeLists.txt
tests/: CMakeLists.txt  test_controlled_temp.cpp  test_identity.cpp  test_mass-spring-damper.cpp
tool/: CMakeLists.txt  fmu_service_handler.cpp  proxyfmu.cpp  temp_dir.hpp
tool/booter/: CMakeLists.txt  boot_service_handler.cpp  boot_service_handler.hpp  proxyfmu_booter.cpp
tool/handlers/: boot_service_handler.hpp  fmu_service_handler.cpp
